MB-3023 - moxi hangs in select() on linux

The theory with this fix is to handle a linux API difference in the
select() API, where the inconclusive proof of this is that I haven't
been able to reproduce it on OSX.

From the linux select man page...

 On  Linux,  select() modifies timeout to reflect the amount of time not
 slept; most other implementations do not do this.   (POSIX.1-2001  per-
 mits  either  behaviour.)   This  causes  problems both when Linux code
 which reads timeout is ported to other operating systems, and when code
 is  ported to Linux that reuses a struct timeval for multiple select()s
 in a loop without reinitializing it.  Consider timeout to be  undefined
 after select() returns.

So, the thinking is that the timeout struct was reused in moxi and
eventually decreased to 0 by repeated calls to select(), which caused
select() on linux to block.

Change-Id: Ie349305be47b404cbba96aedd7f7a2dc2b614ff6
Reviewed-on: http://review.membase.org/3888
Tested-by: Sean Lynch <seanl@literati.org>
Reviewed-by: Sean Lynch <seanl@literati.org>